--- a/m/1/style.css
+++ b/m/1/style.css
@@ -174,4 +174,13 @@ pre span.comment
 }
 
 
+div#contenu_cours a.metier
+{
+	color: black ;
+	font-size: 1.17em ;
+	text-decoration: none;
+	margin-left: 35px ;
+	padding-left: 5px ;
+	border-left: 5px solid pink ;
+
 
